fix contacts card y-centring on safari

--- a/src/widgets/contactsCard/contacts-card.scss
+++ b/src/widgets/contactsCard/contacts-card.scss
@@ -1,4 +1,7 @@
 .contacts-card {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	@include adaptiveValue("padding-block", 31, 11);
 	@include adaptiveValue("padding-inline", 28, 10);
 	border: 2px solid $accent1;
@@ -50,7 +53,7 @@
 	// .contacts-card__body
 
 	&__body {
-		height: 100%;
+		flex: 1;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
